--- a/inner-page.html
+++ b/inner-page.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="" rel="icon">
+  <link href="favicon.jpg" rel="icon">
   <link href="favicon.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
