--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <img id="heroimg" src="hero-bg.jpg">
     <div class="hero-container" data-aos="fade-in">
       <h1>Nufail</h1>
       <p>I'm <span class="typed" data-typed-items="Musician, Pianist,"></span></p>
