--- a/index.html
+++ b/index.html
@@ -71,14 +71,8 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <img id="heroimg" style="width: 100%;
-
-  height: 100vh;
-
-  position: top center;
-
-  background-size: cover;" src="hero-bg.jpg">
+  <section id="hero" style="background: url="hero-bg.jpg";"class="d-flex flex-column justify-content-center align-items-center">
+    
     <div class="hero-container" data-aos="fade-in">
       <h1>Nufail</h1>
       <p>I'm <span class="typed" data-typed-items="Musician, Pianist,"></span></p>
