--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+  <section id="hero" style="background: url("hero-bg.jpg");"class="d-flex flex-column justify-content-center align-items-center">
     
     <div class="hero-container" data-aos="fade-in">
       <h1>Nufail</h1>
