--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     
     <div class="hero-container" data-aos="fade-in">
       <h1>Nufail</h1>
-      <p>I'm <span class="typed" data-typed-items="Musician, Pianist,"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Musician, Pianist,Graphic Designer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -87,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Iam student in Mobile technition but iam pianost and musicion and singer but iam studying mobile techinition</p>
+          <p>Iam  pianost and musicion and singer but iam studying Graphic Designing</p>
         </div>
 
         <div class="row">
